@@ -6,5 +6,6 @@
 		<email>aballier@gentoo.org</email>
 		<name>Alexis Ballier</name>
 	</maintainer>
+<longdescription lang="en">
+</longdescription>
 </pkgmetadata>
-
