@@ -1,0 +1,17 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-documentation-dutch/texlive-documentation-dutch-2008.ebuild,v 1.1 2008/09/09 16:16:17 aballier Exp $
+
+TEXLIVE_MODULES_DEPS="dev-texlive/texlive-documentation-base
+"
+TEXLIVE_MODULE_CONTENTS="lkort lshort-dutch ntg collection-documentation-dutch
+"
+TEXLIVE_MODULE_DOC_CONTENTS="lkort.doc lshort-dutch.doc ntg.doc "
+TEXLIVE_MODULE_SRC_CONTENTS=""
+inherit texlive-module
+DESCRIPTION="TeXLive Dutch documentation"
+
+LICENSE="GPL-2 as-is freedist GPL-1 "
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
